kubernetes-bdp/hadoop/deployment-spark.yaml
---
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  labels:
    role: spark
  name: bdp-private-spark
spec:
  replicas: 1
  selector:
    matchLabels:
      role: spark
  template:
    metadata:
      labels:
        role: spark
    spec:
      containers:
        - name: hive
          image: 10.16.0.144:5000/spark/spark-bdp-private-v1.0:20190515164306
          command: ["bash", "-c", "/export/servers/monit/bin/monit -I"]
          ports:
            - containerPort: 11111
              protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  labels:
    role: spark
  name: bdp-private-spark
spec:
  ports:
    - name: tcp
      port: 11111
  selector:
    role: spark
