kubernetes-bdp/hadoop/resourcemanager-1-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: resourcemanager-1-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: resourcemanager-1.bdp-private.com
    http:
      paths:
      - backend:
          serviceName: resourcemanager-1
          servicePort: 8088
